# camp2026

./: .gitignore  00-linearization-utility.ipynb  01-open-data-exploration-local-solved.ipynb  01-open-data-exploration-local.ipynb  01-open-data-exploration-solved.ipynb  01-open-data-exploration.ipynb  02-decoding-from-spikes.ipynb  AGENTS.md  README.md  environment.yml  lamarr_track_graph_xmaze.json  lovelace_track_graph_xmaze.json  pyproject.toml  tutorial_utils.py
camp-tutorials/: 00-linearization-utility.ipynb  01-open-data-exploration-v0.ipynb  01-open-data-exploration.ipynb  README.md  TEACHING_PLAN.md  V2_NOTEBOOK_PLAN.md  tutorial_utils.py
