[project]
name = "camp2026"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pillow",
    "seaborn",
    "dandi",
    "pynwb",
    "remfile",
    "h5py",
    "h5glance",
    "plotly",
    "ipywidgets",
    "scipy",
    "scikit-learn",
    "track-linearization",
    "ipympl",
    "jupyterlab",
    "ipykernel",
]
